--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "linkedin-api-client": "^0.3.0",
+    "moment-timezone": "^0.5.48",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "openai": "^4.90.0",
     "path": "^0.12.7",
