--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "openai": "^4.90.0",
     "path": "^0.12.7",
